syntax = "proto3";
option go_package = "./pb"; // 包名
option csharp_namespace = "pb"; // 给C#提供的选项

// 同步玩家ID
message SyncPid {
  int32 Pid = 1; // 服务器生成玩家ID
}

// 位置信息
message Position {
  float X = 1;
  float Y = 2;
  float Z = 3;
  float V = 4;
}

// 广播信息
message BroadCast {
  int32 Pid = 1;
  int32 Tp = 2; // 1:世界聊天 2：玩家位置 3：移动后的坐标
  oneof Data {
    string Content = 3; // 玩家聊天信息
    Position P = 4;     // 广播玩家位置
    int32 ActionData = 5; // 玩家具体动作
  }
}

// 世界聊天
message Talk {
  string Content = 1;
}

// 同步玩家信息（九宫格）
message SyncPlayers {
  repeated Player players = 1;
}

// 玩家
message Player{
  int32 Pid = 1;
  Position P = 2;
}